WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192337
Regression(PSON) Google OAuth is broken in private sessions
https://bugs.webkit.org/show_bug.cgi?id=192337
Summary
Regression(PSON) Google OAuth is broken in private sessions
Chris Dumez
Reported
2018-12-03 15:10:36 PST
Google OAuth is broken in private sessions when enabling PSON.
Attachments
Patch
(18.07 KB, patch)
2018-12-03 15:16 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(18.09 KB, patch)
2018-12-03 15:27 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(18.18 KB, patch)
2018-12-03 16:06 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-12-03 15:10:50 PST
<
rdar://problem/46353558
>
Chris Dumez
Comment 2
2018-12-03 15:16:12 PST
Created
attachment 356418
[details]
Patch
Alex Christensen
Comment 3
2018-12-03 15:21:14 PST
Comment on
attachment 356418
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=356418&action=review
> Source/WebKit/UIProcess/WebProcessProxy.h:121 > + enum class BeginsUsingDataStore { No, Yes };
: bool
> Source/WebKit/UIProcess/WebProcessProxy.h:124 > + enum class EndsUsingDataStore { No, Yes };
: bool
Chris Dumez
Comment 4
2018-12-03 15:27:15 PST
Created
attachment 356420
[details]
Patch
Chris Dumez
Comment 5
2018-12-03 16:06:35 PST
Created
attachment 356429
[details]
Patch
Chris Dumez
Comment 6
2018-12-03 16:08:48 PST
Comment on
attachment 356429
[details]
Patch Clearing flags on attachment: 356429 Committed
r238828
: <
https://trac.webkit.org/changeset/238828
>
Chris Dumez
Comment 7
2018-12-03 16:08:50 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 8
2018-12-04 09:19:02 PST
The API test added in this change is failing on macOS and iOS bots: TestWebKitAPI.ProcessSwap.UseSessionCookiesAfterProcessSwapInPrivateBrowsing Received data during response processing, queuing it. LEAK: 1 WebProcessPool /Volumes/Data/slave/highsierra-debug/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:3045 Expected equality of these values: @"foo=bar" Which is: "foo=bar" receivedMessages.get()[0] Which is: ""
https://build.webkit.org/builders/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/builds/5800/steps/run-api-tests/logs/stdio
Chris Dumez
Comment 9
2018-12-04 09:24:55 PST
(In reply to Ryan Haddad from
comment #8
)
> The API test added in this change is failing on macOS and iOS bots: > > > TestWebKitAPI.ProcessSwap.UseSessionCookiesAfterProcessSwapInPrivateBrowsing > Received data during response processing, queuing it. > LEAK: 1 WebProcessPool > > > /Volumes/Data/slave/highsierra-debug/build/Tools/TestWebKitAPI/Tests/ > WebKitCocoa/ProcessSwapOnNavigation.mm:3045 > Expected equality of these values: > @"foo=bar" > Which is: "foo=bar" > receivedMessages.get()[0] > Which is: "" > >
https://build.webkit.org/builders/
> Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/builds/5800/steps/run-api- > tests/logs/stdio
I am investigating via
Bug 192362
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug